@@ -18,6 +18,10 @@ anytime(c("2016Sep01 10:11:12",   "2016Sep01 10:11:12.345678"))
 anytime(c("Sep/01/2016 10:11:12", "Sep/01/2016 10:11:12.345678"))
 anytime(c("Sep-01-2016 10:11:12", "Sep-01-2016 10:11:12.345678"))
 anytime(c("01.Sep.2016 10:11:12", "01.Sep.2016 10:11:12.345678"))
+anytime(c("01Sep2016 101112",     "01Sep2016 101112.345678"))
+anytime(c("01Sep2016 10:11:12",   "01Sep2016 10:11:12.345678"))
+anytime(c("01-Sep-2016 101112",   "01-Sep-2016 101112.345678"))
+anytime(c("01-Sep-2016 10:11:12", "01-Sep-2016 10:11:12.345678"))
 
 cat("\n")
 anytime(c("2016-September-01 10:11:12", "2016-September-01 10:11:12.345678"))
@@ -38,4 +42,9 @@ cat("\n")
 anytime(c("2016-Sep-01", "2016Sep01", "Sep/01/2016", "Sep-01-2016"))
 
 cat("\n")
+anytime(c("01SEP2016", "01-Sep-2016"))
+
+cat("\n")
 anytime(c("2016-September-01", "2016September01", "September/01/2016", "September-01-2016"))
+
+
